add: stream section

--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -17,5 +17,12 @@
   "product": "Products",
   "all-products": "All Products",
   "vision": "Vision",
-  "accessory": "Accessory"
+  "accessory": "Accessory",
+  "Silo": "Silo",
+  "Platonic": "Platonic",
+  "HIJACK": "HIJACK",
+  "Thriller": "Thriller",
+  "stream-now": "Stream Now",
+  "crodwen-room": "The Crodwen Room",
+  "swagger": "Swagger"
 }
