--- a/public/locales/uk/main.json
+++ b/public/locales/uk/main.json
@@ -17,5 +17,12 @@
   "product": "продуктами",
   "all-products": "Всі продукти",
   "vision": "Бачення",
-  "accessory": "Аксесуар"
+  "accessory": "Аксесуар",
+  "Silo": "Силос",
+  "Platonic": "Платонічний",
+  "HIJACK": "Хижак",
+  "Thriller": "Трилер",
+  "stream-now": "Транслювати Зараз",
+  "crodwen-room": "Кімната Кродуена",
+  "swagger": "Чванство"
 }
