add: links-section

--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -24,5 +24,13 @@
   "Thriller": "Thriller",
   "stream-now": "Stream Now",
   "crodwen-room": "The Crodwen Room",
-  "swagger": "Swagger"
+  "swagger": "Swagger",
+  "newsroom": "Newsroom",
+  "apple-leadership": "Apple Leadership",
+  "career-opportunities": "Career Opportunities",
+  "investor": "Investor",
+  "ethic-compliance": "Ethic & Compliance",
+  "events": "Events",
+  "contact-apple": "Contact Apple"
+
 }
