--- a/public/locales/uk/main.json
+++ b/public/locales/uk/main.json
@@ -24,5 +24,13 @@
   "Thriller": "Трилер",
   "stream-now": "Транслювати Зараз",
   "crodwen-room": "Кімната Кродуена",
-  "swagger": "Чванство"
+  "swagger": "Чванство",
+  "newsroom": "Новини",
+  "apple-leadership": "Лідерство Apple",
+  "career-opportunities": "Карєрні можливості",
+  "investor": "Інвестор",
+  "ethic-compliance": "Етика та комплаєнс",
+  "events": "Події",
+  "contact-apple": "Звернутися до Apple"
+
 }
