--- a/public/locales/uk/main.json
+++ b/public/locales/uk/main.json
@@ -11,10 +11,10 @@
   "order": "Замовляйте зараз",
   "from": "Від",
   "details": "деталі",
-  "get-your": "Отримайте свій iPhone",
+  "get-your": "Отримайте свій",
   "see-all": "Переглянути всі",
   "explore": "Ознайомитися з",
-  "product": "продуктами",
+  "product": "Продуктами",
   "all-products": "Всі продукти",
   "vision": "Бачення",
   "accessory": "Аксесуар",
@@ -22,7 +22,7 @@
   "Platonic": "Платонічний",
   "HIJACK": "Хижак",
   "Thriller": "Трилер",
-  "stream-now": "Транслювати Зараз",
+  "stream-now": "Транслювати",
   "crodwen-room": "Кімната Кродуена",
   "swagger": "Чванство",
   "newsroom": "Новини",
@@ -31,6 +31,64 @@
   "investor": "Інвестор",
   "ethic-compliance": "Етика та комплаєнс",
   "events": "Події",
-  "contact-apple": "Звернутися до Apple"
+  "contact-apple": "Звернутися до Apple",
 
+  "shop-learn": "Купуйте та навчайтеся",
+  "store": "Магазин",
+  "gift-cards": "Подарункові карти",
+
+  "find-a-store": "Знайти магазин",
+  "genius-bar": "Бар Genius",
+  "today-at-apple": "Сьогодні в Apple",
+  "apple-store-app": "Додаток Apple Store",
+  "certified-refurbished": "Сертифікований ремонт",
+  "financing": "Фінансування",
+  "carrier-deals-at-apple": "Угоди операторів в Apple",
+  "order-status": "Статус замовлення",
+  "shopping-help": "Довідка щодо покупок",
+
+  "for-business": "Для бізнесу",
+  "apple-and-business": "Apple і бізнес",
+  "shop-for-business": "Магазин для бізнесу",
+
+  "for-education": "Для освіти",
+  "apple-and-education": "Apple і освіта",
+  "shop-for-K-12": "Магазин для K-12",
+  "shop-for-college": "Магазин для коледжу",
+
+  "for-healthcare": "Для охорони здоров'я",
+  "apple-in-healthcare": "Apple в охороні здоров'я",
+  "health-on-apple-watch": "Здоров'я на Apple Watch",
+  "health-records-on-iPhone": "Медичні записи на iPhone",
+
+  "apple-music": "Apple музика",
+  "apple-arcade": "Apple аркада",
+  "apple-fitness+": "Apple фітнес+",
+  "apple-news+": "Apple новини+",
+  "apple-podcasts": "Apple подкаст",
+  "apple-books": "Apple книги",
+
+  "apple-wallet": "Apple гаманець",
+  "wallet": "Гаманець",
+  "apple-card": "Apple картка",
+  "apple-pay": "Apple оплата",
+  "apple-cash": "Apple готівка",
+
+  "account": "Обліковий запис",
+  "manage-your-apple-ID": "Керуйте своїм Apple ID",
+  "apple-store-account": "Обліковий запис Apple Store",
+  "iCloud-com": "iCloud.com",
+
+  
+  "copyright": "Авторське право",
+  "all-rights-reserved": "Всі права захищені",
+  "privacy-policy": "Політика конфіденційності",
+  "terms-of-use": "Умови використання",
+  "sales-and-refunds": "Продажі та відшкодування",
+  "legal": "Закон",
+  "site-map": "Мапа сайту",
+  "USA,-English": "США, Aнглійська",
+  "UKR,-ukrainian": "УКР, Українська",
+  "english": "English",
+  "ukrainian": "Ukrainian"
 }
